# server/Service/DTO/Deposit/AllDepositRequest.cs
@@ -1,0 +1,7 @@
+﻿namespace Service.DTO.Deposit;
+
+public class AllDepositRequest : PaginationRequest
+{
+    public string? Search { get; set; }
+    public string? Status { get; set; }
+}
