# server/Service/DTO/Deposit/GetDepositsResponse.cs
@@ -1,6 +1,9 @@
-﻿namespace Service.DTO.Deposit;
+﻿using Service.DTO.User;
+
+namespace Service.DTO.Deposit;
 
 public class GetDepositsResponse : DepositResponse
 {
     public DateTime? ApprovedAt { get; set; }
+    public UserDto User { get; set; } = null!;
 }
